Fix for Bug 690487.  This should only be a factor when using GraphicsAlphaBits.  The fix was to make sure that when GraphicsAlphaBits is used we initialize the pattern bits buffer.  Otherwise the get_bits operation used during the gx_default_copy_alpha grabs uninitialized memory.  Since we do not test with GraphicsAlphabits in the regression testing I don't expect there to be any differences.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11211 a1074d23-0009-0410-80fe-cf8c14f379e6